RESOLVED FIXED305589
Dirty encoded image blobs are not replaced by clean encoded image blobs as expected
https://bugs.webkit.org/show_bug.cgi?id=305589
Summary Dirty encoded image blobs are not replaced by clean encoded image blobs as ex...
Ben Nham
Reported 2026-01-15 12:49:24 PST
See PR
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-15 12:49:32 PST
Ben Nham
Comment 2 2026-01-15 12:54:32 PST
EWS
Comment 3 2026-01-22 13:35:41 PST
Committed 306036@main (9e8f5212b01a): <https://commits.webkit.org/306036@main> Reviewed commits have been landed. Closing PR #56659 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.