Dirty encoded image blobs are not replaced by clean encoded image blobs as expected https://bugs.webkit.org/show_bug.cgi?id=305589 rdar://168246161

Reviewed by NOBODY (OOPS!).

After caching a blob in the disk cache, we pass a handle to the clean mmap'd blob back to WebProcess
via the `NetworkProcessConnection::DidCacheResource` message. As part of handling this message we
try to replace the dirty encoded blob with the clean encoded blob (in
`CachedResource::tryReplaceEncodedData`). This all seems to work as expected.

However, for CachedImages, there is an Image object that hangs on to the dirty encoded data
(`m_encodedImageData` member) which we never reset. The net effect of this is that there's still one
reference to the dirty encoded data blob for CachedImages even after the dirty => clean buffer swap
occurs, so the dirty buffer never goes away.

Fix this by having CachedImage swap the dirty buffer for the clean buffer in the Image object in
`didReplaceSharedBufferContents`.

This is only enabled on the CG ports since it seems that other ports don't expect to have encoded
data swapped out from underneath them.

* Source/WebCore/loader/cache/CachedImage.cpp:
(WebCore::CachedImage::didReplaceSharedBufferContents: